設計 ユースケース図の作成

--- a/docs/src/fizz_buzz.adoc
+++ b/docs/src/fizz_buzz.adoc
@@ -18,6 +18,15 @@
 * [ ] 繰り返し実行できるようにする
 
 === ユースケース図
+[plantuml]
+----
+left to right direction
+skinparam packageStyle rectangle
+actor User
+rectangle FizzBuzz {
+  User -- (値を出力する)
+}
+----
 
 === クラス図
 
