--- a/docs/src/fizz_buzz.adoc
+++ b/docs/src/fizz_buzz.adoc
@@ -45,6 +45,17 @@ User <- FizzBuzz
 ----
 
 == 実装
+=== テストコード
+[source,javascript]
+----
+include::../../sam-app/fizz_buzz/tests/unit/test_fizz_buzz.js[]
+----
+
+=== プロダクトコード
+[source,javascript]
+----
+include::../../sam-app/fizz_buzz/src/fizz_buzz.js[]
+----
 
 == 参照
 * Asciidoctor[http://asciidoctor.org/]
