--- a/docs/src/fizz_buzz.adoc
+++ b/docs/src/fizz_buzz.adoc
@@ -32,6 +32,7 @@ rectangle FizzBuzz {
 [plantuml]
 ----
 class FizzBuzz {
++{static} generate()
 }
 ----
 
@@ -41,6 +42,7 @@ class FizzBuzz {
 actor User
 
 User -> FizzBuzz
+FizzBuzz -> FizzBuzz :generate
 User <- FizzBuzz
 ----
 
