開発 「Buzz」を出力できるようにする

--- a/docs/src/fizz_buzz.adoc
+++ b/docs/src/fizz_buzz.adoc
@@ -13,7 +13,7 @@
 == 設計
 === TODOリスト
 * [x] 「Fizz」を出力できるようにする
-* [ ] 「Buzz」を出力できるようにする
+* [x] 「Buzz」を出力できるようにする
 * [ ] 「FizzBuzz」を出力できるようにする
 * [ ] 繰り返し実行できるようにする
 
