開発 「FizzBuzz」を出力できるようにする

--- a/docs/src/fizz_buzz.adoc
+++ b/docs/src/fizz_buzz.adoc
@@ -14,7 +14,7 @@
 === TODOリスト
 * [x] 「Fizz」を出力できるようにする
 * [x] 「Buzz」を出力できるようにする
-* [ ] 「FizzBuzz」を出力できるようにする
+* [x] 「FizzBuzz」を出力できるようにする
 * [ ] 繰り返し実行できるようにする
 
 === ユースケース図
