仕様 仕様の追加

--- a/docs/src/fizz_buzz.adoc
+++ b/docs/src/fizz_buzz.adoc
@@ -8,6 +8,7 @@
 * ３で割り切れる場合は「Fizz」を出力する。
 * ５で割り切れる場合は「Buzz」を出力する。
 * 両者で割り切れる場合は「FizzBuzz」を出力する。
+* 上記以外の場合は与えられた数字を出力する。
 * 指定された回数だけ繰り返し実行する。
 
 == 設計
