開発 公開APIテスト作成

--- a/docs/src/fizz_buzz.adoc
+++ b/docs/src/fizz_buzz.adoc
@@ -59,6 +59,10 @@ end
 ----
 include::../../sam-app/fizz_buzz/tests/unit/test_fizz_buzz.js[]
 ----
+[source,javascript]
+----
+include::../../sam-app/fizz_buzz/tests/unit/test_handler.js[]
+----
 
 === プロダクトコード
 [source,javascript]
